@@ -1,7 +1,12 @@
+2009-01-25 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Implement new functions for getting information about all
+	  available dictionaries.
+
 2009-01-15 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Print more informative error message from voikkospell and
-	  voikkohyphenate if too long is encountered.
+	  voikkohyphenate if too long word is encountered.
 
 2009-01-04 Harri Pitkänen <hatapitk@iki.fi>
 
